# EpidemicSimulationOpenGL

./: CMakeLists.txt  main.cpp
cuda/: CMakeLists.txt  main.cu
sequential/: CMakeLists.txt  main.cpp
